--- a/src/app/keyboard/keyboard.component.scss
+++ b/src/app/keyboard/keyboard.component.scss
@@ -1,13 +1,24 @@
-:host{
+.keyboard {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    grid-template-rows: 1fr;
+    margin: 5px;
     justify-content: center;
 
+    .wrapper{
+        display: grid;
+        grid-template-columns: repeat(14,minmax(50px,50px));
+        grid-gap: 2px;
+        grid-template-rows: repeat(4,minmax(50px,50px));
+
+        .space_key{
+            grid-column: 1/-1;
+            height: 50px;
+
+        }
+    
+    }
+   
+
 }
-.keyboard {
-    grid-column: 2;
-    display: grid;
-    border: 1px solid gray;
-  }
-  
